deleted agressive content, we are only friendly family

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<font face="Arial">
     </head>
     <body>
+	<h1>Внимание! Проект закрыт!</h1>
         <h1>Телеграм бот, Эль Ботус</h1>
-        <p> Эль ботус, один из лучших ботов анекдотеров про хохлов и негров</p>
+        <p> Эль ботус, один из лучших ботов саморазговорщиков, сможет скрасить ваше одиночевство повторяя ваши сообщения(есть же чат ГПТ, вы серьёзно?)</p>
         <p><strong>ВНИМАНИЕ!!!</strong> Бот на стадии разработки<small>(и сайт тоже)</small>, поэтому пока может только повторять сообщения</p>
 		<p><img src="Bot2.png" alt="Профиль бота"> <img src="Bot.png" alt="Переписка с ботом"></p>
 		<h1><a href="https://t.me/DubinskiBot">ПОЛУЧИТЬ БОТА</a></h1>
